当前服务器内容修改为单账号单设备模式（一个账号仅能在一个设备中登陆，多设备登陆采取微信式顶号）、多账号并存模式，头像GET仅校验会话时有效、app中图片加载用的是本地的头像文件，存储的数据拆分为账号json+按userID分文件的健康json；被顶号后各端采用前台3s监听、后台转前台即时监听，头像文件在app内部目录存储一次，显示时从内部目录获取，实现即时显示的效果，同时保留远端存储唯一数据来源的要求